[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/preview_buttons.gd" type="Script" id=1]
[ext_resource path="res://scripts/viewport_display.gd" type="Script" id=2]
[ext_resource path="res://assets/1.png" type="Texture" id=3]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.994872 )
colors = PoolColorArray( 0.0901961, 0.0901961, 0.0901961, 1, 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ViewportTexture" id=1]

[node name="preview" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="background_color" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 3 )
expand = true

[node name="background_image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="timer" type="Timer" parent="."]

[node name="viewport_display" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 2 )
Cam = NodePath("../../../../../preview_container/ViewportContainer/Viewport/preview_view/Camera2D")
ColorGrade = NodePath("../../../../../preview_container/ViewportContainer/Viewport/preview_view/ColorGrade")
EdgeDefaultMotionMix = NodePath("../../../../../preview_container/ViewportContainer/Viewport/preview_view/EdgeCustomDefaultMix")

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vb" type="VBoxContainer" parent="margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="SPACE" type="Control" parent="margin/vb"]
margin_right = 1910.0
margin_bottom = 1012.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vbox" type="VBoxContainer" parent="margin/vb"]
margin_top = 1016.0
margin_right = 1910.0
margin_bottom = 1070.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3

[node name="bg_panel" type="PanelContainer" parent="margin/vb/vbox"]
margin_right = 1910.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 32 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="hb" type="HBoxContainer" parent="margin/vb/vbox/bg_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1903.0
margin_bottom = 47.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="visibility" type="TextureButton" parent="margin/vb/vbox/bg_panel/hb"]
self_modulate = Color( 0.792157, 0.792157, 0.792157, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "[F3]
Toggles visibility of these settings
"
texture_normal = ExtResource( 3 )
expand = true

[node name="SPACE4" type="Control" parent="margin/vb/vbox/bg_panel/hb"]
margin_left = 44.0
margin_right = 1240.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="use_smooth_pixel" type="CheckButton" parent="margin/vb/vbox/bg_panel/hb"]
margin_left = 1244.0
margin_right = 1408.0
margin_bottom = 40.0
text = "Smooth Pixel"

[node name="SPACE7" type="Control" parent="margin/vb/vbox/bg_panel/hb"]
margin_left = 1412.0
margin_right = 1428.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 0 )
mouse_filter = 2

[node name="filter" type="CheckButton" parent="margin/vb/vbox/bg_panel/hb"]
margin_left = 1432.0
margin_right = 1545.0
margin_bottom = 40.0
pressed = true
text = "Filter"

[node name="SPACE6" type="Control" parent="margin/vb/vbox/bg_panel/hb"]
margin_left = 1549.0
margin_right = 1565.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 0 )
mouse_filter = 2

[node name="edge_mix" type="CheckButton" parent="margin/vb/vbox/bg_panel/hb"]
margin_left = 1569.0
margin_right = 1706.0
margin_bottom = 40.0
text = "Edge Mix"

[node name="SPACE3" type="Control" parent="margin/vb/vbox/bg_panel/hb"]
margin_left = 1710.0
margin_right = 1726.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 0 )
mouse_filter = 2

[node name="color_grade" type="CheckButton" parent="margin/vb/vbox/bg_panel/hb"]
margin_left = 1730.0
margin_right = 1896.0
margin_bottom = 40.0
text = "Color Grading"

[connection signal="gui_input" from="viewport_display" to="viewport_display" method="_on_viewport_display_gui_input"]
[connection signal="button_up" from="margin/vb/vbox/bg_panel/hb/visibility" to="margin/vb" method="_on_visibility_button_up"]
